# registrojornada-application-python

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  FASE2_REFACTORIZACION.md  FASE3_SERVICIOS.md  README.md  RESUMEN_FASE1.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: BotTelegramRegistro.py  DiaValidator.py  ViveOrange.py  bot.py  config.py  configD.py  configDD.py  main2.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  container.py
app/exceptions/: __init__.py
app/models/: __init__.py  enums.py  workday.py
app/repositories/: __init__.py  holiday_repository.py
app/security/: __init__.py  secrets_manager.py
app/services/: __init__.py  auth_service.py  hr_service.py  notification_service.py  report_service.py
app/utils/: __init__.py  error_handler.py  http_client.py  logger.py  validarDay.py
app/validators/: __init__.py  input_validator.py
config/: holidays.json
data/: holidays.json
docs/: ANALISIS_PROYECTO.md  GUIA_CALIDAD_CODIGO.md  GUIA_GIT.md  GUIA_TESTING.md  NEXT_STEPS.md  README.md
docs/archive/: README_FASE1.md
docs/fases/: FASE1_SEGURIDAD.md  FASE4_TESTING.md
scripts/: encrypt_secrets.py  quick_fix_quality.bat  quick_fix_quality.sh  quick_start_testing.bat  run_quality_checks.bat  run_quality_checks.sh  run_tests.bat  run_tests.sh  validate_environment.py  validate_quality_tools.py  validate_test_environment.py
tests/: conftest.py  test_bot_telegram_registro.py  test_dias_validator.py  test_main.py
(+5 files in other folders)
